--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   },
   "dependencies": {
     "async": "^3.1.0",
+    "bufferutil": "^4.0.1",
     "crypto": "^1.0.1",
     "eslint": "^6.4.0",
     "eslint-config-egg": "^7.5.1",
@@ -97,6 +98,7 @@
     "sqlite3": "^4.0.1",
     "typescript": "^3.6.3",
     "uws": "^9.14.0",
+    "utf-8-validate": "^5.0.2",
     "vue-devtools": "^5.0.0-beta.1",
     "vue-qr": "^2.1.0",
     "vue-socket.io": "^3.0.7",
